jilles      2006/08/17 15:36:43 UTC	(20060817-6093)
  Log:
  More moving around.
  

  Changes:	Modified:
  +10 -0	trunk/include/account.h (File Modified) 
  +0 -11	trunk/include/atheme.h (File Modified) 
  +4 -0		trunk/include/channels.h (File Modified) 
  +2 -0		trunk/include/confparse.h (File Modified) 
  +1 -24	trunk/include/extern.h (File Modified) 
  +3 -0		trunk/include/servers.h (File Modified) 
  +4 -1		trunk/include/services.h (File Modified) 
  +11 -0	trunk/include/users.h (File Modified) 
  +22 -0	trunk/src/conf.c (File Modified) 
  +0 -22	trunk/src/function.c (File Modified) 


jilles      2006/08/17 15:25:00 UTC	(20060817-6091)
  Log:
  operserv akill: better treatment for user@host masks
  with two or more '@' signs.
  

  Changes:	Modified:
  +8 -1		trunk/modules/operserv/akill.c (File Modified) 


jilles      2006/08/17 15:24:10 UTC	(20060817-6089)
  Log:
  Get rid of debug message when dictionary_retrieve()
  cannot find an entry (happens often in normal operation).
  

  Changes:	Modified:
  +0 -4		trunk/src/dictionary.c (File Modified) 


jilles      2006/08/17 00:37:36 UTC	(20060817-6087)
  Log:
  atheme.c: #include "pmodule.h" for pcommand_init()
  

  Changes:	Modified:
  +1 -0		trunk/src/atheme.c (File Modified) 


jilles      2006/08/16 17:46:26 UTC	(20060816-6085)
  Log:
  - Make add_one_to_uid() static
  - Move declaration of struct set_command_ to modules/chanserv/set.c
  - Move help stuff to include/commandtree.h
  

  Changes:	Modified:
  +0 -19	trunk/include/atheme.h (File Modified) 
  +19 -0	trunk/include/commandtree.h (File Modified) 
  +0 -10	trunk/include/extern.h (File Modified) 
  +11 -3	trunk/modules/chanserv/set.c (File Modified) 
  +8 -7		trunk/src/uid.c (File Modified) 


jilles      2006/08/16 17:19:54 UTC	(20060816-6083)
  Log:
  Update depend files.
  

  Changes:	Modified:
  +3 -3		trunk/backend/.depend (File Modified) 
  +43 -43	trunk/contrib/.depend (File Modified) 
  +6 -6		trunk/crypto/.depend (File Modified) 